# serializer version: 1
# name: test_get_positions_service[yna5x1-data0][vacuum.ozmo_950:get-positions]
  dict({
    'vacuum.ozmo_950': dict({
      'id': 'xRV3',
      'payloadType': 'j',
      'resp': dict({
        'body': dict({
          'code': 0,
          'data': dict({
            'chargePos': dict({
              'a': 85,
              'x': 5,
              'y': 9,
            }),
            'deebotPos': dict({
              'a': 85,
              'x': 1,
              'y': 5,
            }),
          }),
          'msg': 'ok',
        }),
        'header': dict({
          'fwVer': '1.2.0',
          'hwVer': '0.1.0',
          'pri': 1,
          'ts': '1717113600000',
          'tzm': 480,
          'ver': '0.0.1',
        }),
      }),
      'ret': 'ok',
    }),
  })
# ---
# name: test_get_positions_service[yna5x1-data1][vacuum.ozmo_950:get-positions]
  dict({
    'vacuum.ozmo_950': dict({
      'id': 'xRV3',
      'payloadType': 'j',
      'resp': dict({
        'body': dict({
          'code': 0,
          'data': dict({
            'chargePos': list([
              dict({
                'a': 32,
                'x': 112,
                'y': 768,
              }),
              dict({
                'a': 0,
                'x': 489,
                'y': 322,
              }),
            ]),
            'deebotPos': dict({
              'a': 90,
              'x': 375,
              'y': 313,
            }),
          }),
          'msg': 'ok',
        }),
        'header': dict({
          'fwVer': '1.2.0',
          'hwVer': '0.1.0',
          'pri': 1,
          'ts': '1717113600000',
          'tzm': 480,
          'ver': '0.0.1',
        }),
      }),
      'ret': 'ok',
    }),
  })
# ---
